Fix height overflow in categories show

--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -8,13 +8,14 @@
   gap: 1px;
 
   .review {
-    height: 300px;
+    height: 275px;
     display: grid;
     grid-template-columns: 1fr 1fr;
     background-color: #fff;
 
     .image-content {
       position: relative;
+      height: inherit;
       &::before {
         content: "";
         background-image: repeating-linear-gradient(135deg, transparent, transparent 4px, rgba(255,255,255,.1) 2px, rgba(0, 0, 0, .1) 6px);
@@ -31,11 +32,11 @@
     &-image {
       width: 100%;
       height: 100%;
-      max-height: 300px;
       object-fit: cover;
     }
 
     &-content {
+      height: inherit;
       background-image: repeating-linear-gradient(135deg, transparent, transparent 4px, rgba(255,255,255,0) 2px, rgba(100, 100, 100, .1) 6px);
       .title {
         font-family: "Chivo", sans-serif;
@@ -46,6 +47,7 @@
 
       .text {
         font-size: 0.8rem;
+        overflow: hidden;
       }
     }
 
